--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div>這是測試頁面</div>
-    <iframe width="300" height="100" src="https://google.com"></iframe>
+    <iframe width="300" height="100" src="ad.html"></iframe>
   </body>
 </html>
