add footer and css

--- a/ad.html
+++ b/ad.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
-    <div>我是廣告啊</div>
+    <div>我是廣告啊！！！</div>
   </body>
 </html>
