--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text.css" href="index.css">
     <title>Ad Test Page</title>
   </head>
   <body>
     <div>這是測試頁面</div>
-    <iframe width="300" height="100" src="ad.html"></iframe>
   </body>
+  <footer>
+    <iframe width="300" height="100" src="ad.html"></iframe>
+  </footer>
 </html>
