--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Ad Test Page</title>
   </head>
   <body>
-    <div>這是測試頁面</div>
+    <div id="main">我是測試頁面</div>
+    <div id="footer"><iframe width="300" height="100" src="ad.html"></iframe></div>
   </body>
-  <footer>
-    <iframe width="300" height="100" src="ad.html"></iframe>
-  </footer>
 </html>
