--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text.css" href="index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Ad Test Page</title>
   </head>
   <body>
