--- a/ad.html
+++ b/ad.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | PublishTest</title>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/main.json");
+    </script>
   </head>
   <body>
-    <div>我是廣告啊！！！</div>
+    <div id="gameContainer" style="width: 300px; height: 100px; margin: auto"></div>
   </body>
 </html>
