--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="main">我是測試頁面</div>
-    <div id="footer"><iframe width="400" height="150" frameBorder="0" scrolling="no" src="ad.html"></iframe></div>
+    <div id="footer"><iframe frameBorder="0" scrolling="no" src="ad.html"></iframe></div>
   </body>
 </html>
