--- a/ad.html
+++ b/ad.html
@@ -10,6 +10,6 @@
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 550px; height: 120px; margin: auto"></div>
+    <div id="gameContainer" style="width: 550px; height: 120px; margin: 0px; padding: 0px; border: 0px"></div>
   </body>
 </html>
