--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="assets/css/my_css.css" />
 	</head>
 	<body class="is-preload">
-
-		<!-- Wrapper -->
+    <!-- 測試用的廣告位置 -->
+    <div id="footer_ad"><iframe id="ad_frame" scrolling="no" src="ad.html"></iframe></div>
+    
+    <!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
