--- a/generic_temp.html
+++ b/generic_temp.html
@@ -10,9 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/my_css.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<!-- 測試用的廣告位置 -->
+		<div id="footer_ad"><iframe id="ad_frame" scrolling="no" src="unity/demo1/ad.html"></iframe></div>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
