--- a/demo2.html
+++ b/demo2.html
@@ -15,7 +15,7 @@
 	</head>
 	<body class="is-preload">
 		<!-- 測試用的廣告位置 -->
-		<div id="footer_ad"><iframe id="ad_frame" scrolling="no" src="unity/demo2/ad.html"></iframe></div>
+		<div id="footer_ad_2"><iframe id="ad_frame_2" scrolling="no" src="unity/demo2/ad.html"></iframe></div>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
