--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="demo1.html">
 										<h2>Demo1</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A Plane flying left or right by Gyro.</p>
 										</div>
 									</a>
 								</article>
@@ -74,7 +74,7 @@
 									<a href="demo2.html">
 										<h2>Demo2</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A rotating town.</p>
 										</div>
 									</a>
 								</article>
@@ -85,7 +85,7 @@
 									<a href="demo3.html">
 										<h2>Demo3</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Unity Chan!</p>
 										</div>
 									</a>
 								</article>
@@ -93,10 +93,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="demo4.html">
 										<h2>Demo4</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>FX test.</p>
 										</div>
 									</a>
 								</article>
